# SDL_nmix

./: .gitignore  LICENSE  README.md  SDL_nmix.c  SDL_nmix.h  SDL_nmix_file.c  SDL_nmix_file.h  doxyfile
examples/: 1_basic.c  2_file.c  3_stresstest.c  4_demo.c  5_stresstest_decoding.c  CMakeLists.txt  sound.aif  test_nmix.c  test_sdlmixer.c
examples/cmake/: FindSDL2_mixer.cmake  FindSDL2_sound.cmake
